Migration from EJB to CDI (Weld) Working member list w/ajax pagination Introduction of generic "DataAccessController". I hate the name, but I can fix that later. :) Removal of Hibernate deps (to be replaced with Bean Validation at some point)

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -13,12 +13,13 @@
     <ui:define name="content">
         Welcome to the online home of the Oklahoma City Java Users Group, Inc.
         <br />
+        <br/>
         The next meeting is:
         <table border="0">
             <tr>
                 <td>Name:</td>
                 <td>
-                    #{meeting.nextMeeting.name} (Register <a href="#{facesContext.externalContext.request.contextPath}/register.jsf?meetingId=#{meeting.nextMeeting.id}">here</a>)
+                    #{meeting.nextMeeting.name} (Register <a href="#{request.contextPath}/register.jsf?meetingId=#{meeting.nextMeeting.id}">here</a>)
                 </td>
             </tr>
             <tr>
