--- a/src/main/webapp/themes/okcjug/layout.xhtml
+++ b/src/main/webapp/themes/okcjug/layout.xhtml
@@ -6,20 +6,20 @@
     <head>
         <title><ui:insert name="title">meetspace</ui:insert></title>
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.6.0/build/reset-fonts-grids/reset-fonts-grids.css"/>
-        <link rel="stylesheet" type="text/css" href="#{facesContext.externalContext.request.contextPath}/style.css" />
-        <link rel="stylesheet" type="text/css" href="#{facesContext.externalContext.request.contextPath}/okcjug.css" />
+        <link rel="stylesheet" type="text/css" href="#{request.contextPath}/style.css" />
+        <link rel="stylesheet" type="text/css" href="#{request.contextPath}/okcjug.css" />
     </head>
 
     <body>
         <div id="doc4" style="border: 1px solid black;">
             <div id="hd" style="border-bottom: 1px solid black; padding: 5px;">
                 <div style="float:right;">
-                    <a style="text-decoration: none;" href="#{facesContext.externalContext.request.contextPath}/index.html">Home</a>
+                    <a style="text-decoration: none;" href="#{request.contextPath}/index.html">Home</a>
                 </div>
                 <h:graphicImage url="/images/okcJugLogo1.gif" style="border: 0px"/>
+                <h:panelGroup id="messages"/>
             </div>
             <div id="bd" style="margin: 5px;">
-                Above the grid!
                 <div id="yui-main">
                     <div class="yui-b">
                         <div class="yui-gc"> <!-- the "special grid" -->
