Impelemented add, edit and delete group member List clean ups

--- a/src/main/webapp/themes/okcjug/layout.xhtml
+++ b/src/main/webapp/themes/okcjug/layout.xhtml
@@ -17,7 +17,7 @@
                     <a style="text-decoration: none;" href="#{request.contextPath}/index.html">Home</a>
                 </div>
                 <h:graphicImage url="/images/okcJugLogo1.gif" style="border: 0px"/>
-                <h:panelGroup id="messages"/>
+                <h:messages id="messages"/>
             </div>
             <div id="bd" style="margin: 5px;">
                 <div id="yui-main">
