It appears that all ajax operations work as expect, as do all links on the various pages. This should now be in a state to serve as a template for other model items.

--- a/src/main/webapp/admin/members/form.xhtml
+++ b/src/main/webapp/admin/members/form.xhtml
@@ -20,7 +20,8 @@
                     <h:inputText id="emailAddress" value="#{memberBean.selected.emailAddress}" title="Email Address" />
                 </h:panelGrid>
                 <h:commandButton action="#{memberBean.create}" value="Add" rendered="#{empty memberBean.selected.id}"/>
-                <h:commandButton action="#{memberBean.update}" value="Update" rendered="#{!empty memberBean.selected.id}"/>
+                <h:commandButton action="#{memberBean.edit}" value="Update" rendered="#{!empty memberBean.selected.id}"/>
+                <h:commandButton action="list" value="Cancel"/>
             </h:form>
     </ui:define>
 </ui:composition>
