--- a/src/main/webapp/admin/members/view.xhtml
+++ b/src/main/webapp/admin/members/view.xhtml
@@ -5,7 +5,6 @@
       template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
     <ui:define name="content">
             <h:form id="memberForm">
-                <f:event type="postAddToView" listener="#{memberBean.checkViewData}"/>
                 <h:panelGrid columns="2">
                     <h:outputLabel value="First Name" for="firstName" />
                     <h:outputText id="firstName" value="#{memberBean.selected.firstName}" title="First Name" />
@@ -16,8 +15,8 @@
                     <h:outputLabel value="Email Address" for="emailAddress" />
                     <h:outputText id="emailAddress" value="#{memberBean.selected.emailAddress}" title="Email Address" />
                 </h:panelGrid>
-                <h:commandLink action="#{memberBean.update}" value="Edit"/>&#160;
-                <h:commandLink action="#{memberBean.create}" value="Add New"/>&#160;
+                <h:commandLink action="/admin/members/form" value="Edit"/>&#160;
+                <h:commandLink action="#{memberBean.prepareCreate}" value="Add New"/>&#160;
                 <h:commandLink action="#{memberBean.prepareList}" value="Member List" immediate="true"/>&#160;
             </h:form>
     </ui:define>
