Expand bean validation use Meeting form clean up for better FacesMessage display

--- a/webapp/src/main/webapp/admin/meetings/form.xhtml
+++ b/webapp/src/main/webapp/admin/meetings/form.xhtml
@@ -1,44 +1,66 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
-      template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
+                xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+                template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
     <ui:define name="content">
-            <h:form id="meetingForm">
-                <h:outputText rendered="#{empty meetingBean.selected.id}" value="&lt;h1&gt;Add a Meeting&lt;/h1&gt;" escape="false"/>
-                <h:outputText rendered="#{!empty meetingBean.selected.id}" value="&lt;h1&gt;Update a Meeting&lt;/h1&gt;" escape="false"/>
-                <h:commandLink action="#{meetingBean.prepareList}" value="Member List" immediate="true"/>
+        <h:form id="meetingForm">
+            <h:outputText rendered="#{empty meetingBean.selected.id}" value="&lt;h1&gt;Add a Meeting&lt;/h1&gt;"
+                          escape="false"/>
+            <h:outputText rendered="#{!empty meetingBean.selected.id}" value="&lt;h1&gt;Update a Meeting&lt;/h1&gt;"
+                          escape="false"/>
+            <h:commandLink action="#{meetingBean.prepareList}" value="Member List" immediate="true"/>
 
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="Meeting Name" for="name" />
-                    <h:inputText id="name" value="#{meetingBean.selected.name}" title="Name" />
+            <h:panelGrid columns="2">
+                <h:outputLabel value="Meeting Name" for="name"/>
+                <h:panelGroup>
+                    <h:inputText id="name" value="#{meetingBean.selected.name}" title="Name"/>
+                    <h:message for="name"/>
+                </h:panelGroup>
 
-                    <h:outputLabel value="Start Date" for="startDate" />
+                <h:outputLabel value="Start Date" for="startDate"/>
+                <h:panelGroup>
                     <h:inputText id="startDate" value="#{meetingBean.selected.startDate}" title="Start Date">
                         <f:convertDateTime pattern="yyyy-MM-dd"/>
                     </h:inputText>
+                    <h:message for="startDate"/>
+                </h:panelGroup>
 
-                    <h:outputLabel value="End Date" for="endDate" />
+                <h:outputLabel value="End Date" for="endDate"/>
+                <h:panelGroup>
                     <h:inputText id="endDate" value="#{meetingBean.selected.endDate}" title="End Date">
                         <f:convertDateTime pattern="yyyy-MM-dd"/>
                     </h:inputText>
+                    <h:message for="endDate"/>
+                </h:panelGroup>
 
-                    <h:outputLabel value="Start Time" for="startTime" />
+                <h:outputLabel value="Start Time" for="startTime"/>
+                <h:panelGroup>
                     <h:inputText id="startTime" value="#{meetingBean.selected.startTime}" title="Start Time">
-                        <f:convertDateTime type="time" pattern="KK:mma"/>
+                        <f:convertDateTime type="time" pattern="hh:mma"/>
                     </h:inputText>
+                    <h:message for="startTime"/>
+                </h:panelGroup>
 
-                    <h:outputLabel value="End Time" for="endTime" />
+                <h:outputLabel value="End Time" for="endTime"/>
+                <h:panelGroup>
                     <h:inputText id="endTime" value="#{meetingBean.selected.endTime}" title="End Time">
-                        <f:convertDateTime type="time" pattern="KK:mma"/>
+                        <f:convertDateTime type="time" pattern="hh:mma"/>
                     </h:inputText>
+                    <h:message for="endTime"/>
+                </h:panelGroup>
 
-                    <h:outputLabel value="Description" for="description" />
-                    <h:inputTextarea id="description" value="#{meetingBean.selected.description}" title="Description" />
-                </h:panelGrid>
-                <h:commandButton action="#{meetingBean.create}" value="Add" rendered="#{empty meetingBean.selected.id}"/>
-                <h:commandButton action="#{meetingBean.edit}" value="Update" rendered="#{!empty meetingBean.selected.id}"/>
-                <h:commandButton action="list" value="Cancel"/>
-            </h:form>
+                <h:outputLabel value="Description" for="description"/>
+                <h:panelGroup>
+                    <h:inputTextarea id="description" value="#{meetingBean.selected.description}" title="Description"/>
+                    <h:message for="description"/>
+                </h:panelGroup>
+
+            </h:panelGrid>
+            <h:commandButton action="#{meetingBean.create}" value="Add" rendered="#{empty meetingBean.selected.id}"/>
+            <h:commandButton action="#{meetingBean.edit}" value="Update" rendered="#{!empty meetingBean.selected.id}"/>
+            <h:commandButton action="list" value="Cancel"/>
+        </h:form>
     </ui:define>
 </ui:composition>
