Added Hibernate Validator for non-spec validators Expanded use of bean validation on the entities Expanded the Sponsor entity Added Sponsor administration Added an admin home page

--- a/webapp/src/main/webapp/home.xhtml
+++ b/webapp/src/main/webapp/home.xhtml
@@ -11,6 +11,7 @@
 <ui:composition template="/themes/#{main.preferences['theme'].value}/layout.xhtml">
     <ui:define name="title">Oklahoma City Java Users Group</ui:define>
     <ui:define name="content">
+        <h:messages layout="table"/>
         Welcome to the online home of the Oklahoma City Java Users Group, Inc.
         <br />
         <br/>
