--- a/webapp/src/main/webapp/themes/okcjug/layout.xhtml
+++ b/webapp/src/main/webapp/themes/okcjug/layout.xhtml
@@ -4,6 +4,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
+    <ui:insert name="metadata"/>
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
