Getting close on random sponsor logos

--- a/webapp/src/main/webapp/themes/okcjug/layout.xhtml
+++ b/webapp/src/main/webapp/themes/okcjug/layout.xhtml
@@ -123,6 +123,9 @@
 
                             <div class="widget">
                                 <h3>Sponsors</h3>
+                                <h:outputLink value="#{main.randomSponsor.homePage}">
+                                    <h:graphicImage value="#{main.randomSponsor.logoUrl}"/>
+                                </h:outputLink>
                             </div>
 
                             <!-- showcase -->
